# LearnOpenGL

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: main.cpp
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/Logger/include/: Logger.h
src/Logger/src/: Logger.cpp  Logger.h
src/Main/: CMakeLists.txt
src/Main/src/: main.cpp
